# python-bootcamp

./: .gitignore  requirements.txt
Clinic_backend/: .env  app.py  pyproject.toml  swagger.yml
Clinic_backend/Admin/: create_admin_token.py  routes.py
Clinic_backend/Admin/models/: department.py  doctor_department.py  user.py
Clinic_backend/Admin/repository/: department_repository.py  user_repository.py
Clinic_backend/Admin/schemas/: department_schema.py  doctor_department_schema.py  user_schema.py
Clinic_backend/Admin/services/: auth_service.py  department_service.py  user_service.py
Clinic_backend/Appointment/: routes.py
Clinic_backend/Appointment/models/: appointment.py
Clinic_backend/Appointment/repository/: appointment_repository.py
Clinic_backend/Appointment/services/: appointment_service.py
Clinic_backend/Auth/: routes.py
Clinic_backend/Auth/schemas/: login_schema.py
Clinic_backend/Auth/services/: auth_service.py
Clinic_backend/Doctor/: routes.py
Clinic_backend/Doctor/models/: availability.py
Clinic_backend/Doctor/repository/: availability_repository.py
Clinic_backend/Doctor/services/: availability_service.py
Clinic_backend/admin/: routes.py
Clinic_backend/admin/repository/: department_repository.py
Clinic_backend/admin/services/: department_service.py  user_service.py
Clinic_backend/appointment/repository/: appointment_repository.py
Clinic_backend/auth/: routes.py
Clinic_backend/auth/repository/: user_repository.py
Clinic_backend/auth/schemas/: __init__.py
Clinic_backend/common/: auth.py  exceptions.py  rbac.py
(+45 files in other folders)
