[tool.poetry]
name = "clinic"
version = "0.1.0"
description = "Flask clinic management API"
authors = ["Badal <badal@mindstix.com>"]
packages = [{ include = "clinic" }]

[tool.poetry.dependencies]
python = "3.9.6"
flask = "3.1.1"
mysql-connector-python = "9.4.0"
psycopg2-binary = "2.9.10"
marshmallow = "4.0.0"
Flask-SQLAlchemy = "3.1.1"
PyJWT = "2.10.1"
flasgger = "0.9.7.1"
python-dotenv = "1.1.1"